trying to fix uneven buttons on my mobile

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1{
 
 .button-container{
     margin-top: 3rem;
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 button {
